Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntObjTextObj.quorum
class main
    action Main
        text t
        Integer int
        t:SetValue("text")
        int = cast(Integer, g)
    end
end